--- a/app/front/customer/cheesy_dreams_homepage.html
+++ b/app/front/customer/cheesy_dreams_homepage.html
@@ -33,7 +33,7 @@
           <h2 class="text-lg font-bold tracking-tight">Cheesy Dreams</h2>
         </div>
         <div class="hidden items-center gap-9 md:flex">
-          <a class="text-sm font-medium hover:text-primary" href="#">Menu</a>
+          <a class="text-sm font-medium hover:text-primary" href="filtered_menu_browsing.html">Menu</a>
           <a class="text-sm font-medium hover:text-primary" href="#">Our Story</a>
           <a class="text-sm font-medium hover:text-primary" href="#">Contact Us</a>
         </div>
