--- a/app/front/customer/filtered_menu_browsing.html
+++ b/app/front/customer/filtered_menu_browsing.html
@@ -116,7 +116,7 @@ Visual
 </button>
 <button class="px-3 py-1.5 rounded-md text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-[#181611] dark:hover:text-white">
 <span class="material-symbols-outlined text-lg inline-block align-middle mr-1.5">notes</span>
-Plain Text
+<a href="plain_text_accessible_menu.html">Plain Text</a>
 </button>
 </div>
 </div>
