--- a/app/front/customer/reservation_confirmation.html
+++ b/app/front/customer/reservation_confirmation.html
@@ -34,8 +34,8 @@
 </div>
 <div class="hidden md:flex flex-1 justify-end gap-8">
 <div class="flex items-center gap-9">
-<a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="#">Home</a>
-<a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="#">Menu</a>
+<a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="/customer/home">Home</a>
+<a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="/customer/menu">Menu</a>
 <a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="#">About Us</a>
 <a class="text-sm font-medium leading-normal text-black/80 dark:text-white/80 hover:text-black dark:hover:text-white" href="#">Contact</a>
 </div>
@@ -84,8 +84,10 @@
 </div>
 </div>
 <div class="flex w-full flex-col sm:flex-row-reverse items-center justify-center gap-4 pt-4">
+<a href="/customer/home" class="w-full sm:w-auto">
 <button class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-background-dark text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0">
 <span class="truncate">Back to Homepage</span>
+</a>
 </button>
 <button class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-transparent text-black dark:text-white hover:bg-black/5 dark:hover:bg-white/5 text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 gap-2">
 <span class="material-symbols-outlined" data-icon="calendar_add_on">calendar_add_on</span>
