--- a/app/front/customer/reservation_details_selection.html
+++ b/app/front/customer/reservation_details_selection.html
@@ -36,7 +36,8 @@
 <h2 class="text-[#181611] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em]">Cheesy Dreams</h2>
 </div>
 <nav class="hidden md:flex items-center gap-9">
-<a class="text-[#181611] dark:text-background-light text-sm font-medium leading-normal hover:text-primary dark:hover:text-primary transition-colors" href="#">Menu</a>
+<a class="text-[#181611] dark:text-background-light text-sm font-medium leading-normal hover:text-primary dark:hover:text-primary transition-colors" href="/customer/home">Home</a>
+<a class="text-[#181611] dark:text-background-light text-sm font-medium leading-normal hover:text-primary dark:hover:text-primary transition-colors" href="/customer/menu">Menu</a>
 <a class="text-[#181611] dark:text-background-light text-sm font-medium leading-normal hover:text-primary dark:hover:text-primary transition-colors" href="#">About</a>
 <a class="text-[#181611] dark:text-background-light text-sm font-medium leading-normal hover:text-primary dark:hover:text-primary transition-colors" href="#">Contact</a>
 </nav>
@@ -133,7 +134,9 @@
 </div>
 </div>
 </div>
+<a href="/customer/confirm_reservation" class="w-full sm:w-auto">
 <button class="flex items-center justify-center rounded-lg h-14 px-6 text-base font-bold bg-primary text-[#181611] dark:text-background-dark hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 dark:focus:ring-offset-background-dark transition-colors w-full">Find a Table</button>
+</a>
 </div>
 </div>
 <div class="hidden lg:block">
