--- a/app/front/manager/pending_reservation_screen.html
+++ b/app/front/manager/pending_reservation_screen.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html class="light" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -9,22 +8,44 @@
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&amp;display=swap" rel="stylesheet"/>
-<script>tailwind.config = {darkMode: "class", theme: {extend: {colors: {primary: "#fac638", "background-light": "#f8f8f5", "background-dark": "#231e0f"}, fontFamily: {display: "Work Sans"}, borderRadius: {DEFAULT: "0.25rem", lg: "0.5rem", xl: "0.75rem", full: "9999px"}}}};</script>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<script>
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            primary: "#fac638",
+            "background-light": "#f8f8f5",
+            "background-dark": "#231e0f"
+          },
+          fontFamily: {
+            display: "Work Sans"
+          },
+          borderRadius: {
+            DEFAULT: "0.25rem",
+            lg: "0.5rem",
+            xl: "0.75rem",
+            full: "9999px"
+          }
+        }
+      }
+    };
+  </script>
 <style>
-      .material-symbols-outlined {
-        font-variation-settings:
+    .material-symbols-outlined {
+      font-variation-settings:
         'FILL' 0,
         'wght' 400,
         'GRAD' 0,
         'opsz' 24
-      }
-    </style>
+    }
+  </style>
 </head>
 <body class="font-display bg-background-light dark:bg-background-dark text-[#1c180d] dark:text-gray-200">
 <div class="relative flex min-h-screen w-full">
-<!-- SideNavBar -->
-<aside class="flex w-64 flex-col border-r border-[#e9e2ce] dark:border-gray-700 bg-background-light dark:bg-background-dark p-4">
-<div class="flex flex-col gap-4">
+<aside class="flex w-64 flex-col justify-between border-r border-[#e9e2ce] dark:border-gray-700 bg-background-light dark:bg-background-dark p-4">
+<div>
 <div class="flex items-center gap-3">
 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" data-alt="Cheesy Dreams restaurant logo" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCor59IY07Sz5T21LFh9rRftVYk6LrXM33iWurfQlQ84BnjAdTmSuB_wM2nlwuirFlSULHJOEfmJIGTaN1yorl8PJSs4u-Dy98KB6R4rkEGfPTMN9wHBLDeKF8IvCZWnxvtgFht43rnZRPth_nPY_G6XWgcjGd48MVlbLcC-SgRWE84teDNF8LVjPT2BX6mJPcMOaeuT7frFhOTh71-qjc1qu5oHfmcp5Rw62G7Oj-y8XzoBEe5cJDOYUNVmN38evp2q8VTH9y6kAs");'></div>
 <div class="flex flex-col">
@@ -32,7 +53,7 @@
 <p class="text-[#9e8747] dark:text-gray-400 text-sm font-normal leading-normal">Management</p>
 </div>
 </div>
-<nav class="mt-4 flex flex-col gap-2">
+<nav class="mt-8 flex flex-col gap-2">
 <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-[#1c180d] dark:text-gray-300 hover:bg-primary/20 dark:hover:bg-primary/30" href="#">
 <span class="material-symbols-outlined">dashboard</span>
 <p class="text-sm font-medium">Dashboard</p>
@@ -55,7 +76,7 @@
 </a>
 </nav>
 </div>
-<div class="mt-auto flex flex-col gap-1">
+<div class="flex flex-col gap-2">
 <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-[#1c180d] dark:text-gray-300 hover:bg-primary/20 dark:hover:bg-primary/30" href="#">
 <span class="material-symbols-outlined">help</span>
 <p class="text-sm font-medium">Help</p>
@@ -66,24 +87,21 @@
 </a>
 </div>
 </aside>
-<!-- Main Content -->
 <main class="flex-1 p-8">
 <div class="mx-auto max-w-7xl">
-<!-- PageHeading -->
 <div class="flex flex-wrap items-center justify-between gap-4">
 <h1 class="text-[#1c180d] dark:text-white text-4xl font-black tracking-[-0.033em]">Pending Reservations</h1>
 <div class="flex items-center gap-2">
 <button class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f4f0e6] dark:bg-gray-700 text-[#1c180d] dark:text-white text-sm font-bold tracking-[0.015em] hover:bg-primary/30 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark">
 <span class="material-symbols-outlined mr-2 text-base">filter_list</span>
-                            Filter
-                        </button>
+              Filter
+            </button>
 <button class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f4f0e6] dark:bg-gray-700 text-[#1c180d] dark:text-white text-sm font-bold tracking-[0.015em] hover:bg-primary/30 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark">
 <span class="material-symbols-outlined mr-2 text-base">search</span>
-                            Search
-                        </button>
+              Search
+            </button>
 </div>
 </div>
-<!-- Table -->
 <div class="mt-8 @container">
 <div class="overflow-hidden rounded-xl border border-[#e9e2ce] dark:border-gray-700 bg-background-light dark:bg-background-dark">
 <table class="min-w-full">
@@ -149,28 +167,14 @@
 </table>
 </div>
 </div>
-<!-- Empty State -->
-<!-- <div class="mt-8 flex flex-col items-center justify-center rounded-xl border border-dashed border-[#e9e2ce] dark:border-gray-700 bg-background-light dark:bg-background-dark/50 py-24">
-                    <div class="flex flex-col items-center gap-4 text-center">
-                        <span class="material-symbols-outlined text-6xl text-primary">celebration</span>
-                        <div class="flex flex-col items-center gap-2">
-                            <p class="text-lg font-bold text-[#1c180d] dark:text-white">No Pending Reservations</p>
-                            <p class="max-w-xs text-sm text-[#9e8747] dark:text-gray-400">You've reviewed all incoming requests. Great job!</p>
-                        </div>
-                        <button class="mt-2 flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary/20 dark:bg-primary/30 text-[#1c180d] dark:text-white text-sm font-bold tracking-[0.015em] hover:bg-primary/30 dark:hover:bg-primary/40 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark">
-                            <span class="material-symbols-outlined mr-2 text-base">refresh</span>
-                            Refresh
-                        </button>
-                    </div>
-                </div> -->
 </div>
 </main>
-<!-- FAB -->
 <div class="absolute bottom-8 right-8">
-<button class="flex h-14 cursor-pointer items-center justify-center gap-3 overflow-hidden rounded-full bg-primary pl-4 pr-5 text-[#1c180d] shadow-lg transition-transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark">
-<span class="material-symbols-outlined">accessibility_new</span>
-<span class="truncate text-base font-bold tracking-[0.015em]">Accessibility</span>
+<button class="flex h-14 w-14 cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary text-[#1c180d] shadow-lg transition-transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark">
+<span class="material-symbols-outlined text-3xl">accessibility_new</span>
+<span class="sr-only">Accessibility</span>
 </button>
 </div>
 </div>
+
 </body></html>
