--- a/app/front/manager/revised_dashboard_overview.html
+++ b/app/front/manager/revised_dashboard_overview.html
@@ -29,19 +29,19 @@
 <nav class="flex-1 flex flex-col items-center py-6">
 <ul class="space-y-4">
 <li>
-<a aria-current="page" class="flex flex-col items-center p-2 rounded-lg text-primary bg-primary/10" href="#" title="Dashboard">
+<a aria-current="page" class="flex flex-col items-center p-2 rounded-lg text-primary bg-primary/10" href="/manager/dashboard" title="Dashboard">
 <span class="material-symbols-outlined filled text-2xl">dashboard</span>
 <span class="text-xs font-bold mt-1">Dashboard</span>
 </a>
 </li>
 <li>
-<a class="flex flex-col items-center p-2 rounded-lg text-text-muted-light dark:text-text-muted-dark hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors" href="#" title="Inventory Management">
+<a class="flex flex-col items-center p-2 rounded-lg text-text-muted-light dark:text-text-muted-dark hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors" href="/manager/inventory" title="Inventory Management">
 <span class="material-symbols-outlined text-2xl">inventory_2</span>
 <span class="text-xs font-medium mt-1">Inventory</span>
 </a>
 </li>
 <li>
-<a class="flex flex-col items-center p-2 rounded-lg text-text-muted-light dark:text-text-muted-dark hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors" href="#" title="Sales Reports">
+<a class="flex flex-col items-center p-2 rounded-lg text-text-muted-light dark:text-text-muted-dark hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors" href="/manager/sales" title="Sales Reports">
 <span class="material-symbols-outlined text-2xl">bar_chart</span>
 <span class="text-xs font-medium mt-1">Reports</span>
 </a>
@@ -60,10 +60,11 @@
 <h1 class="text-text-light dark:text-text-dark text-xl font-bold">Cheesy Dreams</h1>
 </div>
 <nav class="hidden lg:flex flex-1 justify-center items-center gap-8">
-<a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="#">Reservations</a>
+<a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="/manager/manage_reservations">Reservations</a>
 <a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="#">Orders</a>
 <a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="#">Staff</a>
 <a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="#">Settings</a>
+<a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors" href="/logout">Logout</a>
 </nav>
 <div class="flex items-center gap-4">
 <button class="flex cursor-pointer items-center justify-center rounded-full h-10 w-10 bg-surface-light dark:bg-surface-dark text-text-muted-light dark:text-text-muted-dark hover:text-primary dark:hover:text-primary transition-colors">
