--- a/app/front/staff/live_orders.html
+++ b/app/front/staff/live_orders.html
@@ -26,18 +26,22 @@
 <p class="text-gray-400 text-sm font-normal leading-normal">Management System</p>
 </div>
 </div>
-<nav class="mt-6 flex flex-col gap-2">
-<a class="flex items-center gap-3 rounded-lg bg-primary/20 px-3 py-2 text-primary ring-2 ring-primary/50 focus:outline-none focus:ring-2 focus:ring-primary" href="#">
+<nav class="flex flex-col gap-2 mt-4">
+<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-white" href="/staff/live">
 <span class="material-symbols-outlined">receipt_long</span>
 <p class="text-sm font-medium leading-normal">Live Orders</p>
 </a>
-<a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-300 hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-primary" href="#">
-<span class="material-symbols-outlined">menu_book</span>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/reservations">
+<span class="material-symbols-outlined">calendar_month</span>
+<p class="text-sm font-medium leading-normal">Reservations</p>
+</a>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/customer/menu">
+<span class="material-symbols-outlined">restaurant_menu</span>
 <p class="text-sm font-medium leading-normal">Menu</p>
 </a>
-<a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-300 hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-primary" href="#">
-<span class="material-symbols-outlined">event_seat</span>
-<p class="text-sm font-medium leading-normal">Reservations</p>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/task">
+<span class="material-symbols-outlined">checklist</span>
+<p class="text-sm font-medium leading-normal">Tasks</p>
 </a>
 </nav>
 </div>
