--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -31,25 +31,21 @@
 </div>
 </div>
 <nav class="flex flex-col gap-2 mt-4">
-<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="#">
-<span class="material-symbols-outlined">dashboard</span>
-<p class="text-sm font-medium leading-normal">Dashboard</p>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/live">
+<span class="material-symbols-outlined">receipt_long</span>
+<p class="text-sm font-medium leading-normal">Live Orders</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-white" href="#">
+<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-white" href="/staff/reservations">
 <span class="material-symbols-outlined">calendar_month</span>
 <p class="text-sm font-medium leading-normal">Reservations</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="#">
-<span class="material-symbols-outlined">table_restaurant</span>
-<p class="text-sm font-medium leading-normal">Tables</p>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/customer/menu">
 <span class="material-symbols-outlined">restaurant_menu</span>
 <p class="text-sm font-medium leading-normal">Menu</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="#">
-<span class="material-symbols-outlined">group</span>
-<p class="text-sm font-medium leading-normal">Staff</p>
+<a class="flex items-center gap-3 px-3 py-2 text-white/70 hover:text-white hover:bg-[#282e39] rounded-lg transition-colors" href="/staff/task">
+<span class="material-symbols-outlined">checklist</span>
+<p class="text-sm font-medium leading-normal">Tasks</p>
 </a>
 </nav>
 </div>
