--- a/app/front/staff/check.html
+++ b/app/front/staff/check.html
@@ -44,8 +44,10 @@
 <p class="text-gray-700 dark:text-gray-300 text-lg font-normal leading-normal pb-6 pt-1 px-4 text-center max-w-2xl">Please check in to start your shift.</p>
 <div class="flex flex-col sm:flex-row w-full justify-center gap-4 px-4 py-3 max-w-lg">
 <button class="flex flex-1 min-w-[84px] cursor-pointer items-center justify-center gap-2 overflow-hidden rounded-lg h-14 px-5 bg-primary text-charcoal text-lg font-bold leading-normal transition-transform duration-200 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-primary/50">
-<span class="material-symbols-outlined">login</span>
-<span class="truncate">Check In</span>
+<a href="/staff/reservations" class="flex flex-1 min-w-[84px] cursor-pointer items-center justify-center gap-2 overflow-hidden rounded-lg h-14 px-5 bg-primary text-charcoal text-lg font-bold leading-normal transition-transform duration-200 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-primary/50">
+    <span class="material-symbols-outlined">login</span>
+    <span class="truncate">Check In</span>
+</a>
 </button>
 <button class="flex flex-1 min-w-[84px] cursor-not-allowed items-center justify-center gap-2 overflow-hidden rounded-lg h-14 px-5 bg-gray-300 dark:bg-charcoal/50 text-gray-500 dark:text-gray-400 text-lg font-bold leading-normal opacity-60">
 <span class="material-symbols-outlined">logout</span>
